--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="button-group">
         <form action="https://formspree.io/f/mzdapwwy" method="POST" style="display: inline;">
-            <input type="hidden" name="Response" value="She said YES!">
+            <input type="hidden" name="Response" value="Abby said YES!">
             <button type="submit" id="yesBtn">Yes!</button>
         </form>
 
